--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "langchain-chroma>=1.1.0",
     "pytest-asyncio>=1.3.0",
     "anyio>=4.10.0",
+    "vllm-rs>=0.8.12",
 ]
 
 [project.optional-dependencies]
